<resources>
    <string name="app_name">Zip Wi-Fi Configurator</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="wifi_name_prefix">wifi_name_prefix</string>
    <string name="wifi_password">wifi_password</string>
    <string name="zip_saved_password">zip_saved_password</string>
    <string name="zip_config_password">zip_config_password</string>
    <string name="zip_wifi_password">zip_wifi_password</string>
    <string name="action_scan_screen">Connection</string>
    <string name="action_info">Info</string>
    <string name="proxyHostLabelText">Proxy Host</string>
    <string name="proxyPortLabelText">Proxy Port</string>
    <string name="proxyUsernameLabelText">Proxy Username</string>
    <string name="proxyPasswordLabelText">Proxy Password</string>
    <string name="showProxyPassword">Show Proxy Password</string>
    <string name="zip_proxy_password">zip_proxy_password</string>
    <string name="zip_proxy_hostname">zip_proxy_hostname</string>
    <string name="zip_proxy_port">zip_proxy_port</string>
    <string name="zip_proxy_username">zip_proxy_username</string>
    <string name="checkbox_configure_proxy">Configure Proxy</string>
    <string name="wifi_domains_label_text">WiFi Domains</string>
    <string name="hidden_domain_label_text">Hidden Domain</string>
    <string name="security_type_label_text">Security Type</string>
    <string name="password_label_text">Password</string>
    <string name="show_password">Show Password</string>
    <string name="submit_button_text">Configure Wi-Fi</string>
    <string name="button_scan">Scan</string>
    <string-array name="test_wifi_names">
        <item>Shuttle Badminton</item>
        <item>Tennis</item>
        <item>FootBall</item>
        <item>Basket Ball</item>
        <item>Table Tennis</item>
        <item>Chess</item>
        <item>Hockey</item>
    </string-array>
    <string-array name="wifi_security_types">
        <item>Open</item>
        <item>WPA/WPA2</item>
        <item>WEP</item>
    </string-array>
    <string name="pref_router_hostname">Hostname</string>
    <string name="pref_default_hostname">192.168.1.1</string>
    <string name="pref_router_port">Port</string>
    <string name="pref_default_port">9001</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message
        history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="action_About">About</string>
</resources>
